<resources>
    <string name="app_name">AppicFilterDemo</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="acc_no_1">Acc no.: 1</string>
    <string name="underlinedClear"><u>Clear</u></string>
    <string name="select_account_number">Select Account Number</string>
    <string name="select_brand">Select Brand</string>
    <string name="select_location">Select Location</string>
    <string name="select_all">Select All</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="dashboard">Dashboard</string>
    <string name="select_previous_first">Select Previous First</string>

</resources>